Changed colour scheme to dark greys and fixed width/height overflow

--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -8,9 +8,10 @@ p {
 .network {
   width: 100%;
   height: 80vh;
-  border: 1px solid lightgray;
+  // border: 1px solid lightgray;
   margin: 0;
   padding: 0;
+  background-color: $darker-grey;
 }
 
 body {
@@ -23,6 +24,7 @@ body {
     width: 100%;
     height: 10vh;
     background-color:  $dark-grey;
+    border-bottom: 1px solid $darker-grey;
 
     p {
       margin: 0;
@@ -42,28 +44,31 @@ body {
     height: 80vh;
     background-color: $dark-grey;
     float: left;
-    border: 1px solid $light-grey;
+    // border: 1px solid $light-grey;
 
     .file {
       width: 100%;
       height: 10%;
-      border: 1px solid $light-grey;
+      // border: 1px solid $light-grey;
+      // outline: 1px solid $light-grey;
       position: relative;
 
       p {
         margin: 0;
-        padding: 6% 4%;
-
+        // padding: 6% 4%;
+        // padding-left: 10px;
+        width: 100%;
+        height: 100%;
       }
 
       :hover {
-        background-color: #aaaaaa;
+        background-color: $medium-grey;
       }
     }
   }
 
   .graph-panel {
-    width: 79%;
+    width: 80%;
     height: 80%;
     float: right;
 
@@ -79,8 +84,14 @@ body {
     width: 100%;
     height: 10vh;
     background-color: $dark-grey;
+    border-top: 1px solid $darker-grey;
     position: fixed;
     bottom: 0;
+
+    p {
+      margin: 0;
+
+    }
   }
 
 }
