--- a/stylesheets/variables.scss
+++ b/stylesheets/variables.scss
@@ -1,5 +1,7 @@
-$black: #000000;
-$white: #ffffff;
-$dark-grey: #828282;
-$light-grey: #ecebe8;
+$black: #000;
+$white: #fff;
+$light-grey: #adafb2;
+$medium-grey: #828282;
+$dark-grey: #282828;
+$darker-grey: #181818;
 $green: #84db00;
